# bioinformatics-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  entry_script.sh  environment-py-details.yml  environment-py.yml  environment-r-details.yml  environment-r.yml  environment.yml  pyproject.toml  r-requirements.R  r-requirements.txt  setup.py
docker/: DOCKERFILE  Dockerfile  dev-container.Dockerfile  docker-jupyter.sh
docs/: prompts.txt
examples/python/: basic_workflow.ipynb  module_testing_notebook.ipynb  python_tutorial.md
examples/python/.ipynb_checkpoints/: module_testing-checkpoint.ipynb  module_testing_notebook-checkpoint.ipynb  module_testing_part2-checkpoint.ipynb  python_tutorial-checkpoint.md
podman/: dev-jupyter.sh  podman_build.sh
python/sctools/: S3Utils.py  __init__.py  dim_reduction.py  dimensionality.py  enhanced_visualization.py  feature_selection.py  geneset.py  normalization.py  qc.py  spatial.py  visualization.py
python/sctools/utils/: __init__.py  s3_utils.py
